# PromptTune

./: .gitignore  PR.md  README.md  package.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.in  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_client_columns.py  003_add_llm_meta.py  004_ensure_llm_meta_if_missing.py  005_add_analytics_events.py  006_add_analytics_occurred_at_index.py  007_convert_analytics_properties_to_jsonb.py
backend/app/: config.py  dependencies.py  goals.py  logging_config.py  main.py
backend/app/api/: router.py  schemas.py  validation.py
backend/app/api/v1/: analytics.py  health.py  improve.py  limits.py  prompts.py
backend/app/db/: models.py
backend/app/middleware/: logging.py
backend/app/scripts/: cleanup_analytics_events.py
backend/app/security/: redaction.py
backend/app/services/: analytics_retention.py  errors.py  improvement_changes.py  llm.py  prompt_service.py  rate_limiter.py  system_prompt.txt
backend/tests/: conftest.py  test_analytics.py  test_analytics_retention.py  test_config.py  test_goals.py  test_health.py  test_improve.py  test_infra_coverage.py  test_ip_validation.py  test_limits.py  test_llm_service.py  test_prompts.py  test_rate_limiter.py  test_security.py
backend/tests/middleware/: test_logging_middleware.py
docs/: backend-owned-configurable-limits-plan.md  deployment.md  metrics.md  project concept.md
extension/: .env.local.example  .eslintrc.cjs  .prettierignore  eslint.config.js  package-lock.json  package.json  tsconfig.json  (+2 more)
(+60 files in other folders)
